asg/tests/pass/boolean/true_and_true.leo
function main() {
    const a = true && true;

    console.assert(a == true);
}