asg/tests/fail/boolean/true_and_u32.leo
function main() {
    const a = true && 1u32;
}